--- a/webfiles/html/apple.html
+++ b/webfiles/html/apple.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-<section class="menu cid-qIZqNKFuaO" once="menu" id="menu1-4">
+<section class="menu cid-qJt5H6TVuh" once="menu" id="menu1-10">
 
 
 
@@ -50,17 +50,21 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-white display-4" href="android.html" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Phones</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="android.html">Android</a><a class="dropdown-item text-white display-4" href="apple.html" aria-expanded="false">Apple</a></div>
-                </li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">
-                        Accessories</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="cases.html">Cases&nbsp;</a><a class="dropdown-item text-white display-4" href="headphones.html">Headphones and speakers</a></div></li><li class="nav-item"><a class="nav-link link text-white display-4" href="services.html">
+                <a class="nav-link link dropdown-toggle text-white display-4" href="android.html" data-toggle="dropdown-submenu" aria-expanded="false">
+                    Phones</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="android.html">Android</a><a class="dropdown-item text-white display-4" href="apple.html" aria-expanded="false">Apple</a></div>
+            </li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">
+                Accessories</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="cases.html">Cases&nbsp;</a><a class="dropdown-item text-white display-4" href="headphones.html">Headphones and speakers</a></div></li><li class="nav-item"><a class="nav-link link text-white display-4" href="services.html">
 
-                        Phone Services</a></li>
+                Phone Services</a></li>
                 <li class="nav-item"><a class="nav-link link text-white display-4" href="contact-us.html">
 
-                        Contact Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="cart.html">
+                    Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link link text-white display-4" href="faq.html">
 
-                        Shopping Cart</a></li></ul>
+                    F.A.Q</a></li>
+                <li class="nav-item"><a class="nav-link link text-white display-4" href="cart.html">
+
+                    Shopping Cart</a></li></ul>
 
         </div>
     </nav>
