--- a/webfiles/html/cart.html
+++ b/webfiles/html/cart.html
@@ -29,7 +29,7 @@
 
 <body>
 
-<section class="menu cid-qIZqNKFuaO" once="menu" id="menu1-36">
+<section class="menu cid-qJt5H6TVuh" once="menu" id="menu1-10">
 
 
 
@@ -63,7 +63,11 @@
                 Phone Services</a></li>
                 <li class="nav-item"><a class="nav-link link text-white display-4" href="contact-us.html">
 
-                    Contact Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="cart.html">
+                    Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link link text-white display-4" href="faq.html">
+
+                    F.A.Q</a></li>
+                <li class="nav-item"><a class="nav-link link text-white display-4" href="cart.html">
 
                     Shopping Cart</a></li></ul>
 
