Paypal links added

--- a/webfiles/html/apple.html
+++ b/webfiles/html/apple.html
@@ -107,7 +107,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £999.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=9X981011FN073364F&useraction=commit&mfid=1521831821451_d7b07aae40c79#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £669.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy<br></a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=64E16706VX9608748&useraction=commit&mfid=1521832503759_571554e078d86#/checkout/signup" class="btn btn-primary display-4">Buy<br></a></div>
                 </div>
             </div>
 
@@ -137,7 +137,7 @@
                             Iphone 8 Plus<br><br>&nbsp;<br><br></h4>
                         <p class="mbr-text mbr-fonts-style display-7"><strong>£769.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=5XX206456C4238449&useraction=commit&mfid=1521833339421_305bf8582c794#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -164,14 +164,14 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £549.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy<br></a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=3AE33232BJ960353V&useraction=commit&mfid=1521833849230_81b0d9ebb459#/checkout/signup" class="btn btn-primary display-4">Buy<br></a></div>
                 </div>
             </div>
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="../../media%20files/images/iphone7plus-590x380.jpg" alt="" title="">
+                        <img src="../../media%20files/images/iphone7plus-590x380.jpg" alt="Iphone 7 Plus - £649.00" title="Iphone 7 Plus">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -195,7 +195,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £449.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy<br></a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=52L75744B05485419&useraction=commit&mfid=1521835158186_2479a22e4f38#/checkout/signup" class="btn btn-primary display-4">Buy<br></a></div>
                 </div>
             </div>
 
@@ -222,7 +222,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £599.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy<br></a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=8404666778431671S&useraction=commit&mfid=1521836086442_e481775c2cb51#/checkout/signup" class="btn btn-primary display-4">Buy<br></a></div>
                 </div>
             </div>
 
@@ -237,7 +237,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £329.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=5AX41517FA6368728&useraction=commit&mfid=1521836514910_db4d19a7afa69#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -253,7 +253,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £299.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy<br></a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=2PY83049TJ853521C&useraction=commit&mfid=1521841104900_61444dfe93766#/checkout/signup" class="btn btn-primary display-4">Buy<br></a></div>
                 </div>
             </div>
 
