--- a/webfiles/html/cases.html
+++ b/webfiles/html/cases.html
@@ -106,7 +106,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £49.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=1X344481UY266540P&useraction=commit&mfid=1521845441533_e067b5e740015#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £49.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=2N771883P7422093T&useraction=commit&mfid=1521845531434_659c319c21e46#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £24.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=0Y03304773669991U&useraction=commit&mfid=1521845656882_b99919649355b#/checkout/signup" class="btn btn-primary display-4">
                             Buy&nbsp;</a></div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £39.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy</a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=2AT97228WJ776624R&useraction=commit&mfid=1521845778223_ef7b3c74ea313#/checkout/signup" class="btn btn-primary display-4">Buy</a></div>
                 </div>
             </div>
 
@@ -178,7 +178,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £19.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=8HE027485F546301Y&useraction=commit&mfid=1521845979264_c9c2b1738cd#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £24.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=6TL54727YA480382N&useraction=commit&mfid=1521846067623_f9bf89164e572#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -235,7 +235,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £29.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=3T998241SW0223704&useraction=commit&mfid=1521846168675_8e7d9e4062e6c#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £24.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=6AY51545P2056254N&useraction=commit&mfid=1521846683333_cc454b3ebfa3#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
