--- a/webfiles/html/headphones.html
+++ b/webfiles/html/headphones.html
@@ -107,7 +107,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £39.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=0XL441357G829971C&useraction=commit&mfid=1521842507469_8fccddff11ef2#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £169.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=3X430489KR026782A&useraction=commit&mfid=1521843110134_c17fa003e6e64#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £19.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=26211812CJ9274515&useraction=commit&mfid=1521843434367_d9ead1d519634#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £49.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy</a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=16417838545249247&useraction=commit&mfid=1521843538044_b3559760be474#/checkout/signup" class="btn btn-primary display-4">Buy</a></div>
                 </div>
             </div>
 
@@ -182,7 +182,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £24.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy</a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=2VD63332JG088863Y&useraction=commit&mfid=1521843963090_317fc0d7cc0ea#/checkout/signup" class="btn btn-primary display-4">Buy</a></div>
                 </div>
             </div>
 
@@ -197,7 +197,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £119.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=11G3115587393704H&useraction=commit&mfid=1521844119420_85cf4a071509b#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -225,7 +225,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £229.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=2TD92302YG578033T&useraction=commit&mfid=1521844439092_2754f5cc1651#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -240,7 +240,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £29.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=0LW70166DA487493B&useraction=commit&mfid=1521844582991_15da90b9afcb8#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -256,7 +256,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £14.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=7K277175LL7137014&useraction=commit&mfid=1521845274366_56a81082f241#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
