--- a/webfiles/html/android.html
+++ b/webfiles/html/android.html
@@ -106,7 +106,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £559.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=8SW496642S604992H&useraction=commit&mfid=1521823984439_388c739833147#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £659.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy</a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=48H94485G5522624S&useraction=commit&mfid=1521825526919_445fc30e6b83b#/checkout/signup" class="btn btn-primary display-4">Buy</a></div>
                 </div>
             </div>
 
@@ -135,7 +135,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £449.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=4SX196303E009624Y&useraction=commit&mfid=1521826026243_f65a7795e70b#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £229.00</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy</a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=5NC24212YB767230F&useraction=commit&mfid=1521826331197_bba1624ce483f#/checkout/signup" class="btn btn-primary display-4">Buy</a></div>
                 </div>
             </div>
 
@@ -176,7 +176,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £399.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=2X957245TA180221E&useraction=commit&mfid=1521827110506_f10166193888d#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -191,7 +191,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £349.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy<br></a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=9GU01995S7852015U&useraction=commit&mfid=1521828232913_fb08030d9f222#/checkout/signup" class="btn btn-primary display-4">Buy<br></a></div>
                 </div>
             </div>
 
@@ -217,7 +217,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £499.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=1990544864844632S&useraction=commit&mfid=1521828792755_c56f821c56e86#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -232,7 +232,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £439.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=6JD7711342989333C&useraction=commit&mfid=1521829409522_f8d3989c1da0d#/checkout/signup" class="btn btn-primary display-4">
                             Buy</a></div>
                 </div>
             </div>
@@ -247,7 +247,7 @@
                         <p class="mbr-text mbr-fonts-style display-7"><strong>
                             £169.99</strong></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="" class="btn btn-primary display-4">Buy</a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/webapps/hermes?token=4KR8990798130232M&useraction=commit&mfid=1521829829081_39df90f6a37f7#/checkout/signup" class="btn btn-primary display-4">Buy</a></div>
                 </div>
             </div>
 
