Shopping cart completed

--- a/webfiles/html/contact-us.html
+++ b/webfiles/html/contact-us.html
@@ -72,9 +72,23 @@
 
 <section class="engine"><a href="https://mobirise.co/k">bootstrap template</a></section><section class="mbr-section form1 cid-qJP3M09L1Q" id="form1-1x">
 
-    
+    <div class="container">
+        <div class="media-container-row">
+            <div class="title col-12 col-md-8">
+                <h2 class="align-center pb-3 mbr-fonts-style display-2">
+                    ABOUT US<br></h2>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Mobile World Station is the UK's leading online mobile phones and accessories retailer — offering the latest mobile phones and exciting accessories. Based in London since we started the company in 2000, Mobile World Station employs over 100 staff and operates through offices and our dedicated website.</h3>
 
-    
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section form1 cid-qJP3M09L1Q" id="form1-1x">
+
+
+
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
