Text to speech completed

--- a/webfiles/html/contact-us.html
+++ b/webfiles/html/contact-us.html
@@ -77,7 +77,9 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     ABOUT US<br></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Mobile World Station is the UK's leading online mobile phones and accessories retailer — offering the latest mobile phones and exciting accessories. Based in London since we started the company in 2000, Mobile World Station employs over 100 staff and operates through offices and our dedicated website.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Mobile World Station is the UK's leading online mobile phones and accessories retailer — offering the latest mobile phones and exciting accessories. Based in London since we started the company in 2000, Mobile World Station employs over 100 staff and operates through offices and our dedicated website.<br><br><audio controls>
+                    <source src="../../media%20files/audio/aboutus.mp3" type="audio/mp3"
+                </audio></h3>
 
             </div>
         </div>
@@ -159,7 +161,9 @@
 </h5>
                         <p class="mbr-text align-left mbr-fonts-style display-7">
                             Phone: 020 8686 5700<br>
-                            Email: 602245@students.croydon.ac.uk&nbsp;<br></p>
+                            Email: 602245@students.croydon.ac.uk&nbsp;<br><audio controls>
+                            <source src="../../media%20files/audio/contact.mp3" type="audio/mp3"
+                        </audio></p>
                     </div>
                 </div>
                 
