--- a/webfiles/html/faq.html
+++ b/webfiles/html/faq.html
@@ -111,7 +111,10 @@
                         <div id="collapse1_39" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                   We offer a 30 day returns guarantee on most items. So if you need to bring it back, just bring it back to our store and we will refund you immediately. However it may take 5 – 7 days for your bank to process the money.</p>
+                                   We offer a 30 day returns guarantee on most items. So if you need to bring it back, just bring it back to our store and we will refund you immediately. However it may take 5 – 7 days for your bank to process the money.<br>
+                                    <audio controls>
+                                        <source src="../../media%20files/audio/returns.mp3" type="audio/mp3"
+                                    </audio>
                             </div>
                         </div>
                     </div>
@@ -126,7 +129,10 @@
                         <div id="collapse2_39" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                   A warranty covers the phone if it breaks down through no fault of your own. However a warranty will only cover certain repairs and certain scenarios, so it’s important to know what’s included and decide from there whether you wish to purchase additional phone insurance.</p>
+                                   A warranty covers the phone if it breaks down through no fault of your own. However a warranty will only cover certain repairs and certain scenarios, so it’s important to know what’s included and decide from there whether you wish to purchase additional phone insurance.<br>
+                                    <audio controls>
+                                        <source src="../../media%20files/audio/warranty.mp3" type="audio/mp3"
+                                    </audio></p>
                             </div>
                         </div>
                     </div>
@@ -139,7 +145,10 @@
                         </div>
                         <div id="collapse3_39" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">We fix a wide range of phones including the latest iPhone and Samsung Galaxy models, and a range of phones from other leading manufacturers including Sony, Microsoft, HTC and LG. If you aren't sure whether we can fix your phone, pop into one of our stores and talk to a friendly staff member.<br></p>
+                                <p class="mbr-fonts-style panel-text display-7">We fix a wide range of phones including the latest iPhone and Samsung Galaxy models, and a range of phones from other leading manufacturers including Sony, Microsoft, HTC and LG. If you aren't sure whether we can fix your phone, pop into one of our stores and talk to a friendly staff member.<br>
+                                    <audio controls>
+                                        <source src="../../media%20files/audio/fix.mp3" type="audio/mp3"
+                                    </audio></p>
                             </div>
                         </div>
                     </div>
@@ -152,8 +161,11 @@
                         </div>
                         <div id="collapse4_39" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">Depending on the make and model of your phone our Repair &amp; Service Centres will usually be able to fix your phone on-site, usually on the same day providing the required part is available in store. Some models do need to be sent away to be repaired and this can take several days.
-<br></p>
+                                <p class="mbr-fonts-style panel-text display-7">Depending on the make and model of your phone our Repair &amp; Service Centres will usually be able to fix your phone on-site, usually on the same day providing the required part is available in store. Some models do need to be sent away to be repaired and this can take several days.<br>
+                                    <audio controls>
+                                        <source src="../../media%20files/audio/repair.mp3" type="audio/mp3"
+                                    </audio>
+</p>
                             </div>
                         </div>
                     </div>
@@ -166,7 +178,10 @@
                         </div>
                         <div id="collapse5_39" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">If your device has been lost or stolen, we're available 24 hours a day to help. We can block your device, and send you a new sim with your existing number. If your device has been stolen, you need to let us and the police know within 24 hours. If it's been lost, just let us know within 24 hours. We'll then cap your liability for calls and data to £100, in case there is any unauthorised use of your device.
+                                <p class="mbr-fonts-style panel-text display-7">If your device has been lost or stolen, we're available 24 hours a day to help. We can block your device, and send you a new sim with your existing number. If your device has been stolen, you need to let us and the police know within 24 hours. If it's been lost, just let us know within 24 hours. We'll then cap your liability for calls and data to £100, in case there is any unauthorised use of your device.<br>
+                                    <audio controls>
+                                        <source src="../../media%20files/audio/lost_devices.mp3" type="audio/mp3"
+                                    </audio>
 <br></p>
                             </div>
                         </div>
